--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bun": "^1.2.18",
     "concurrently": "^9.2.0",
     "lint-staged": "^16.1.2",
+    "shiki": "^3.8.0",
     "typescript": "^5.3.3",
     "ultracite": "5.0.36"
   },
