--- a/package.json
+++ b/package.json
@@ -30,14 +30,12 @@
   },
   "dependencies": {
     "@mdx-js/esbuild": "^3.1.0",
+    "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@tailwindcss/cli": "^4.1.11",
-    "@types/markdown-it": "^14.1.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^14.1.0",
-    "markdown-it-front-matter": "^0.2.4",
-    "marked": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
