feat(mdx): removed old mdx handling, add new mdx handling

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "gray-matter": "^4.0.3",
+    "mdx-bundler": "^10.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
