--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mdx-bundler": "^10.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.5"
   },
